--- a/the-movie/src/app/app.component.scss
+++ b/the-movie/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .expanded-toolbar {
-  position: sticky;
+  position: relative;
   display: flex;
   justify-content: flex-end;
   align-items: center;
