--- a/the-movie/src/app/components/movie/movie.component.scss
+++ b/the-movie/src/app/components/movie/movie.component.scss
@@ -3,7 +3,7 @@
 
   width: 100%;
   height: 100%;
-  background-image: url(../../../assets/images/097f15_74ac881b7f3c48bf85080de25a7294ec_mv2.gif);
+  background-image: url(../../shared/images/097f15_74ac881b7f3c48bf85080de25a7294ec_mv2.gif);
   background-color: #ccc; /*color en codigo hexadecimal o rgb*/
 
   background-size: cover; /*contain, cover, pixel,porcentaje*/
