--- a/the-movie/src/app/components/movie/movie.component.html
+++ b/the-movie/src/app/components/movie/movie.component.html
@@ -4,7 +4,7 @@
 
 
   <div id="div-{{item.id}}" *ngFor="let item of movies">
-    <div class="divNave"><img src="https://jordienriquezbit.github.io/assets/images/nave2-4.png" alt="" height="200px" ></div>
+    <div class="divNave"><img src="./assets/images/nave2-5.png" alt="" height="200px" ></div>
     <div class="divLine"></div>
     <div class="divMovie"><a [routerLink]="[item.id]"><img src="{{item.poster}}"  alt="" width="250" height="380"></a></div>
   </div>
