--- a/the-movie/src/app/components/movie-detail/movie-detail.component.html
+++ b/the-movie/src/app/components/movie-detail/movie-detail.component.html
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div id="button">
-      <button  mat-raised-button color="primary" >Home</button>
+      <button  mat-raised-button color="primary" [routerLink]="['/movie']" >Home</button>
     </div>
 </div>
 
